src/main/antlr4/com/hindbiswas/jhp/.antlr/JhpTemplateParser.java
// Generated from /home/shinigami/Java/java-hypertext-preprocessor/src/main/antlr4/com/hindbiswas/jhp/JhpTemplateParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JhpTemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ECHO_START=1, RAW_ECHO_START=2, STMT_START=3, COMMENT_START=4, TEXT=5, 
		ECHO_END=6, RAW_ECHO_END=7, EXPR_LPAREN=8, EXPR_RPAREN=9, EXPR_LBRACKET=10, 
		EXPR_RBRACKET=11, EXPR_DOT=12, EXPR_COMMA=13, EXPR_QUESTION=14, EXPR_COLON=15, 
		EXPR_PLUS=16, EXPR_MINUS=17, EXPR_MULTIPLY=18, EXPR_DIVIDE=19, EXPR_MODULO=20, 
		EXPR_LT=21, EXPR_LTE=22, EXPR_GT=23, EXPR_GTE=24, EXPR_EQ=25, EXPR_NEQ=26, 
		EXPR_AND=27, EXPR_OR=28, EXPR_NOT=29, EXPR_NUMBER=30, EXPR_STRING_LITERAL=31, 
		EXPR_BOOLEAN_LITERAL=32, EXPR_NULL=33, EXPR_IDENTIFIER=34, EXPR_WS=35, 
		STMT_END=36, IF=37, ELSEIF=38, ELSE=39, ENDIF=40, FOR=41, ENDFOR=42, FOREACH=43, 
		ENDFOREACH=44, WHILE=45, ENDWHILE=46, BREAK=47, CONTINUE=48, INCLUDE=49, 
		BLOCK=50, ENDBLOCK=51, IN=52, LPAREN=53, RPAREN=54, LBRACKET=55, RBRACKET=56, 
		DOT=57, COMMA=58, SEMICOLON=59, QUESTION=60, COLON=61, PLUS=62, MINUS=63, 
		MULTIPLY=64, DIVIDE=65, MODULO=66, LT=67, LTE=68, GT=69, GTE=70, EQ=71, 
		NEQ=72, AND=73, OR=74, NOT=75, ASSIGN=76, PLUS_PLUS=77, MINUS_MINUS=78, 
		NUMBER=79, STRING_LITERAL=80, BOOLEAN_LITERAL=81, NULL=82, IDENTIFIER=83, 
		WS=84, COMMENT_END=85, COMMENT_TEXT=86;
	public static final int
		RULE_template = 0, RULE_templateElement = 1, RULE_echoStatement = 2, RULE_rawEchoStatement = 3, 
		RULE_controlStatement = 4, RULE_ifStatement = 5, RULE_elseIfStatement = 6, 
		RULE_elseStatement = 7, RULE_forStatement = 8, RULE_forInit = 9, RULE_forUpdate = 10, 
		RULE_foreachStatement = 11, RULE_whileStatement = 12, RULE_breakStatement = 13, 
		RULE_continueStatement = 14, RULE_includeStatement = 15, RULE_expression = 16, 
		RULE_primary = 17, RULE_functionCall = 18, RULE_argumentList = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "templateElement", "echoStatement", "rawEchoStatement", "controlStatement", 
			"ifStatement", "elseIfStatement", "elseStatement", "forStatement", "forInit", 
			"forUpdate", "foreachStatement", "whileStatement", "breakStatement", 
			"continueStatement", "includeStatement", "expression", "primary", "functionCall", 
			"argumentList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{{'", "'{{{'", "'{%'", "'{#'", null, "'}}'", "'}}}'", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'%}'", "'if'", "'elseif'", "'else'", "'endif'", "'for'", 
			"'endfor'", "'foreach'", "'endforeach'", "'while'", "'endwhile'", "'break'", 
			"'continue'", "'include'", "'block'", "'endblock'", "'in'", null, null, 
			null, null, null, null, "';'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'='", "'++'", 
			"'--'", null, null, null, null, null, null, "'#}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ECHO_START", "RAW_ECHO_START", "STMT_START", "COMMENT_START", 
			"TEXT", "ECHO_END", "RAW_ECHO_END", "EXPR_LPAREN", "EXPR_RPAREN", "EXPR_LBRACKET", 
			"EXPR_RBRACKET", "EXPR_DOT", "EXPR_COMMA", "EXPR_QUESTION", "EXPR_COLON", 
			"EXPR_PLUS", "EXPR_MINUS", "EXPR_MULTIPLY", "EXPR_DIVIDE", "EXPR_MODULO", 
			"EXPR_LT", "EXPR_LTE", "EXPR_GT", "EXPR_GTE", "EXPR_EQ", "EXPR_NEQ", 
			"EXPR_AND", "EXPR_OR", "EXPR_NOT", "EXPR_NUMBER", "EXPR_STRING_LITERAL", 
			"EXPR_BOOLEAN_LITERAL", "EXPR_NULL", "EXPR_IDENTIFIER", "EXPR_WS", "STMT_END", 
			"IF", "ELSEIF", "ELSE", "ENDIF", "FOR", "ENDFOR", "FOREACH", "ENDFOREACH", 
			"WHILE", "ENDWHILE", "BREAK", "CONTINUE", "INCLUDE", "BLOCK", "ENDBLOCK", 
			"IN", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "DOT", "COMMA", "SEMICOLON", 
			"QUESTION", "COLON", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", 
			"LT", "LTE", "GT", "GTE", "EQ", "NEQ", "AND", "OR", "NOT", "ASSIGN", 
			"PLUS_PLUS", "MINUS_MINUS", "NUMBER", "STRING_LITERAL", "BOOLEAN_LITERAL", 
			"NULL", "IDENTIFIER", "WS", "COMMENT_END", "COMMENT_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JhpTemplateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JhpTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JhpTemplateParser.EOF, 0); }
		public List<TemplateElementContext> templateElement() {
			return getRuleContexts(TemplateElementContext.class);
		}
		public TemplateElementContext templateElement(int i) {
			return getRuleContext(TemplateElementContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 46L) != 0)) {
				{
				{
				setState(40);
				templateElement();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateElementContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(JhpTemplateParser.TEXT, 0); }
		public EchoStatementContext echoStatement() {
			return getRuleContext(EchoStatementContext.class,0);
		}
		public RawEchoStatementContext rawEchoStatement() {
			return getRuleContext(RawEchoStatementContext.class,0);
		}
		public ControlStatementContext controlStatement() {
			return getRuleContext(ControlStatementContext.class,0);
		}
		public TemplateElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateElement; }
	}

	public final TemplateElementContext templateElement() throws RecognitionException {
		TemplateElementContext _localctx = new TemplateElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_templateElement);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(TEXT);
				}
				break;
			case ECHO_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				echoStatement();
				}
				break;
			case RAW_ECHO_START:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				rawEchoStatement();
				}
				break;
			case STMT_START:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				controlStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EchoStatementContext extends ParserRuleContext {
		public TerminalNode ECHO_START() { return getToken(JhpTemplateParser.ECHO_START, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ECHO_END() { return getToken(JhpTemplateParser.ECHO_END, 0); }
		public EchoStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_echoStatement; }
	}

	public final EchoStatementContext echoStatement() throws RecognitionException {
		EchoStatementContext _localctx = new EchoStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_echoStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(ECHO_START);
			setState(55);
			expression(0);
			setState(56);
			match(ECHO_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RawEchoStatementContext extends ParserRuleContext {
		public TerminalNode RAW_ECHO_START() { return getToken(JhpTemplateParser.RAW_ECHO_START, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RAW_ECHO_END() { return getToken(JhpTemplateParser.RAW_ECHO_END, 0); }
		public RawEchoStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rawEchoStatement; }
	}

	public final RawEchoStatementContext rawEchoStatement() throws RecognitionException {
		RawEchoStatementContext _localctx = new RawEchoStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rawEchoStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(RAW_ECHO_START);
			setState(59);
			expression(0);
			setState(60);
			match(RAW_ECHO_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControlStatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ForeachStatementContext foreachStatement() {
			return getRuleContext(ForeachStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public IncludeStatementContext includeStatement() {
			return getRuleContext(IncludeStatementContext.class,0);
		}
		public ControlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlStatement; }
	}

	public final ControlStatementContext controlStatement() throws RecognitionException {
		ControlStatementContext _localctx = new ControlStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_controlStatement);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				ifStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				forStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				foreachStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				whileStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				breakStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				continueStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				includeStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public List<TerminalNode> STMT_START() { return getTokens(JhpTemplateParser.STMT_START); }
		public TerminalNode STMT_START(int i) {
			return getToken(JhpTemplateParser.STMT_START, i);
		}
		public TerminalNode IF() { return getToken(JhpTemplateParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(JhpTemplateParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(JhpTemplateParser.RPAREN, 0); }
		public List<TerminalNode> STMT_END() { return getTokens(JhpTemplateParser.STMT_END); }
		public TerminalNode STMT_END(int i) {
			return getToken(JhpTemplateParser.STMT_END, i);
		}
		public TerminalNode ENDIF() { return getToken(JhpTemplateParser.ENDIF, 0); }
		public List<TemplateElementContext> templateElement() {
			return getRuleContexts(TemplateElementContext.class);
		}
		public TemplateElementContext templateElement(int i) {
			return getRuleContext(TemplateElementContext.class,i);
		}
		public List<ElseIfStatementContext> elseIfStatement() {
			return getRuleContexts(ElseIfStatementContext.class);
		}
		public ElseIfStatementContext elseIfStatement(int i) {
			return getRuleContext(ElseIfStatementContext.class,i);
		}
		public ElseStatementContext elseStatement() {
			return getRuleContext(ElseStatementContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(STMT_START);
			setState(72);
			match(IF);
			setState(73);
			match(LPAREN);
			setState(74);
			expression(0);
			setState(75);
			match(RPAREN);
			setState(76);
			match(STMT_END);
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(77);
					templateElement();
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(83);
					elseIfStatement();
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(89);
				elseStatement();
				}
				break;
			}
			setState(92);
			match(STMT_START);
			setState(93);
			match(ENDIF);
			setState(94);
			match(STMT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseIfStatementContext extends ParserRuleContext {
		public TerminalNode STMT_START() { return getToken(JhpTemplateParser.STMT_START, 0); }
		public TerminalNode ELSEIF() { return getToken(JhpTemplateParser.ELSEIF, 0); }
		public TerminalNode LPAREN() { return getToken(JhpTemplateParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(JhpTemplateParser.RPAREN, 0); }
		public TerminalNode STMT_END() { return getToken(JhpTemplateParser.STMT_END, 0); }
		public List<TemplateElementContext> templateElement() {
			return getRuleContexts(TemplateElementContext.class);
		}
		public TemplateElementContext templateElement(int i) {
			return getRuleContext(TemplateElementContext.class,i);
		}
		public ElseIfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseIfStatement; }
	}

	public final ElseIfStatementContext elseIfStatement() throws RecognitionException {
		ElseIfStatementContext _localctx = new ElseIfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elseIfStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(STMT_START);
			setState(97);
			match(ELSEIF);
			setState(98);
			match(LPAREN);
			setState(99);
			expression(0);
			setState(100);
			match(RPAREN);
			setState(101);
			match(STMT_END);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					templateElement();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseStatementContext extends ParserRuleContext {
		public TerminalNode STMT_START() { return getToken(JhpTemplateParser.STMT_START, 0); }
		public TerminalNode ELSE() { return getToken(JhpTemplateParser.ELSE, 0); }
		public TerminalNode STMT_END() { return getToken(JhpTemplateParser.STMT_END, 0); }
		public List<TemplateElementContext> templateElement() {
			return getRuleContexts(TemplateElementContext.class);
		}
		public TemplateElementContext templateElement(int i) {
			return getRuleContext(TemplateElementContext.class,i);
		}
		public ElseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseStatement; }
	}

	public final ElseStatementContext elseStatement() throws RecognitionException {
		ElseStatementContext _localctx = new ElseStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elseStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(STMT_START);
			setState(109);
			match(ELSE);
			setState(110);
			match(STMT_END);
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(111);
					templateElement();
					}
					} 
				}
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends ParserRuleContext {
		public List<TerminalNode> STMT_START() { return getTokens(JhpTemplateParser.STMT_START); }
		public TerminalNode STMT_START(int i) {
			return getToken(JhpTemplateParser.STMT_START, i);
		}
		public TerminalNode FOR() { return getToken(JhpTemplateParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(JhpTemplateParser.LPAREN, 0); }
		public ForInitContext forInit() {
			return getRuleContext(ForInitContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(JhpTemplateParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(JhpTemplateParser.SEMICOLON, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ForUpdateContext forUpdate() {
			return getRuleContext(ForUpdateContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(JhpTemplateParser.RPAREN, 0); }
		public List<TerminalNode> STMT_END() { return getTokens(JhpTemplateParser.STMT_END); }
		public TerminalNode STMT_END(int i) {
			return getToken(JhpTemplateParser.STMT_END, i);
		}
		public TerminalNode ENDFOR() { return getToken(JhpTemplateParser.ENDFOR, 0); }
		public List<TemplateElementContext> templateElement() {
			return getRuleContexts(TemplateElementContext.class);
		}
		public TemplateElementContext templateElement(int i) {
			return getRuleContext(TemplateElementContext.class,i);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(STMT_START);
			setState(118);
			match(FOR);
			setState(119);
			match(LPAREN);
			setState(120);
			forInit();
			setState(121);
			match(SEMICOLON);
			setState(122);
			expression(0);
			setState(123);
			match(SEMICOLON);
			setState(124);
			forUpdate();
			setState(125);
			match(RPAREN);
			setState(126);
			match(STMT_END);
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(127);
					templateElement();
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(133);
			match(STMT_START);
			setState(134);
			match(ENDFOR);
			setState(135);
			match(STMT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForInitContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JhpTemplateParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(JhpTemplateParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ForInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forInit; }
	}

	public final ForInitContext forInit() throws RecognitionException {
		ForInitContext _localctx = new ForInitContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_forInit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(IDENTIFIER);
			setState(138);
			match(ASSIGN);
			setState(139);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForUpdateContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JhpTemplateParser.IDENTIFIER, 0); }
		public TerminalNode PLUS_PLUS() { return getToken(JhpTemplateParser.PLUS_PLUS, 0); }
		public TerminalNode MINUS_MINUS() { return getToken(JhpTemplateParser.MINUS_MINUS, 0); }
		public TerminalNode ASSIGN() { return getToken(JhpTemplateParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ForUpdateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forUpdate; }
	}

	public final ForUpdateContext forUpdate() throws RecognitionException {
		ForUpdateContext _localctx = new ForUpdateContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_forUpdate);
		int _la;
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(IDENTIFIER);
				setState(142);
				_la = _input.LA(1);
				if ( !(_la==PLUS_PLUS || _la==MINUS_MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(IDENTIFIER);
				setState(144);
				match(ASSIGN);
				setState(145);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
